# mandelbrot-set

./: .dockerignore  .editorconfig  CMakeLists.txt  Dockerfile  LICENSE  Makefile  meson.build
include/: complex.h  mandelbrot.h
src/: complex.c  main.c  mandelbrot.c
